welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:2: error: reassignment to val
  if ((a=2)&&(b=2)&&(c=2)) {return 10}
        ^redTicket:2: error: reassignment to val
  if ((a=2)&&(b=2)&&(c=2)) {return 10}
               ^redTicket:2: error: reassignment to val
  if ((a=2)&&(b=2)&&(c=2)) {return 10}
                      ^